Update product page to stochastic one-shot pipeline definition

--- a/product.html
+++ b/product.html
@@ -124,7 +124,7 @@
   <h1>AI-Ensemble</h1>
   <p>
     A three-stage stochastic reasoning pipeline that separates exploration,
-    comparison, and application using explicit prompt priors and controlled sampling.
+    comparison, and application using proprietary priors and AI sampling parameters.
   </p>
 </header>
 
@@ -161,8 +161,7 @@
         </p>
         <p>
           It operates under a high-variance stochastic regime and applies
-          a conceptual prompt prior (prefix or suffix) to deliberately
-          broaden the solution space.
+          a conceptual prompt prior to deliberately broaden the solution space.
         </p>
         <p>
           This stage is optimized for discovery and idea expansion,
@@ -240,11 +239,11 @@
   <section>
     <h2>Design philosophy</h2>
     <p>
-      <strong>
-        Reliable reasoning emerges from structure, explicit constraints,
-        and controlled stochastic plurality — not from conversational memory
-        or scale alone.
-      </strong>
+      <strong> 
+      AI-Ensemble is designed around controlled manipulation of model parameters
+      and probabilistic reasoning principles, applying Bayesian-inspired inference
+      to guide one-shot generation without relying on conversational memory.
+     </strong>
     </p>
   </section>
 
