Update product page to stochastic one-shot pipeline definition

--- a/product.html
+++ b/product.html
@@ -124,7 +124,7 @@
   <h1>AI-Ensemble</h1>
   <p>
     A three-stage stochastic reasoning pipeline that separates exploration,
-    comparison, and application using <strong>proprietary<strong> priors and AI sampling parameters.
+    comparison, and application using proprietary priors and AI sampling parameters.
   </p>
 </header>
 
@@ -137,7 +137,7 @@
       modelling, and decision support.
     </p>
     <p>
-      Unlike chat-based assistants, AI-Ensemble is <strong>multidimensional</strong>.
+      Unlike chat-based assistants, AI-Ensemble is <strong>multidimensional<strong>.
       Each query is evaluated independently as a one-shot generation under
       our <strong>own<strong> stochastic parameters and prompt priors.
       There is no accumulating dialogue state and no hidden conversational memory.
