Update product page to stochastic one-shot pipeline definition

--- a/product.html
+++ b/product.html
@@ -137,9 +137,9 @@
       modelling, and decision support.
     </p>
     <p>
-      Unlike chat-based assistants, AI-Ensemble is <strong>multidimensional<strong>.
+      Unlike chat-based assistants, AI-Ensemble is <strong>multidimensional</strong>.
       Each query is evaluated independently as a one-shot generation under
-      our <strong>own<strong> stochastic parameters and prompt priors.
+      our <strong>own</strong> stochastic parameters and prompt priors.
       There is no accumulating dialogue state and no hidden conversational memory.
     </p>
     <p>
