product update on multiple model

--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
   <title>AI-Ensemble — Product</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
-        content="AI-Ensemble is a three-stage stochastic reasoning system using one-shot, stateless inference with explicit stochastic control." />
+        content="AI-Ensemble is a three plane studio to help you form a PROMPT and challange the it OUTCAME." />
 
   <style>
     :root {
@@ -123,8 +123,8 @@
 <header>
   <h1>AI-Ensemble</h1>
   <p>
-    A three-stage stochastic reasoning pipeline that separates exploration,
-    comparison, and application using proprietary priors and AI sampling parameters.
+    A three-stage pipeline that separates prompt creation,
+    prompt output, and verification.
   </p>
 </header>
 
@@ -133,18 +133,16 @@
   <section>
     <h2>Overview</h2>
     <p>
-      AI-Ensemble is a stochastic reasoning system designed for research,
-      modelling, and decision support.
+      AI-Ensemble is a stochastic reasoning system designed for academic research.
     </p>
     <p>
       Unlike chat-based assistants, AI-Ensemble is <strong>multidimensional</strong>.
-      Each query is evaluated independently as a one-shot generation under
-      our <strong>own</strong> stochastic parameters and prompt priors.
-      There is no accumulating dialogue state and no hidden conversational memory.
+      Each query is A) refined, B) generated three times under different 
+      stochastic parameters, C) evaluated potential blind spots.
+      The first plane refines the question while the last plane evaluates.
     </p>
     <p>
-      This design ensures that reasoning remains attributable, comparable,
-      and free from prompt drift across runs.
+      The middle plain generates the output three times under different perspectives
     </p>
   </section>
 
@@ -154,18 +152,18 @@
     <div class="pipeline">
 
       <div class="stage">
-        <h3>1. Conceptual — exploratory reasoning</h3>
+        <h3>1. Refining — help you make a prompt</h3>
         <p>
-          The Conceptual stage is designed for abstraction, reframing,
-          and hypothesis generation.
+          The refining plane is designed for abstraction, reframing,
+          and optimal prompt creation.
         </p>
         <p>
           It operates under a high-variance stochastic regime and applies
-          a conceptual prompt prior to deliberately broaden the solution space.
+          a prompt prior for helping you to improve our prompt.
         </p>
         <p>
-          This stage is optimized for discovery and idea expansion,
-          not for precision or convergence.
+          This stage is optimized for prompt discovery,
+          not for output generation.
         </p>
       </div>
 
@@ -180,24 +178,23 @@
           or repetition control.
         </p>
         <p>
-          Outputs are rendered side-by-side to expose uncertainty and
-          solution multiplicity before any commitment is made.
+          Outputs are rendered side-by-side to expose uncertainty 
+          you get three answers, 1) conservative, 2) balanced 3) exploratory
         </p>
       </div>
 
       <div class="stage">
-        <h3>3. Applied Research — constrained reasoning</h3>
+        <h3>3. Output evaluator— find weak spots</h3>
         <p>
-          The Applied Research stage converts exploration into action.
+          The output evaluator will look for potential pitfalls in the prompt outcame.
         </p>
         <p>
           It operates under a lower-variance stochastic regime and applies
-          explicit explanatory constraints, such as stating assumptions
-          and justifying reasoning steps.
+          explicit inquisitory priors leading to a prompt review.
         </p>
         <p>
-          The result is optimized for clarity, reproducibility,
-          and defensible decision-making.
+          The user can make the final decision on the merit of the output
+          once his idea has travel through AI ensemble pipeline.
         </p>
       </div>
 
@@ -205,15 +202,15 @@
   </section>
 
   <section>
-    <h2>One-shot and stateless by design</h2>
+    <h2>Three planes 5 models</h2>
     <p>
-      AI-Ensemble uses a one-shot generation paradigm rather than
+      AI-Ensemble uses a multiple model generation paradigm rather than
       a conversational memory model.
     </p>
     <p>
       Each interface call is evaluated independently under explicit
-      stochastic and prompt constraints, ensuring clean attribution
-      and valid comparison across runs.
+      stochastic and prompt constraints. This allows ideas to mature 
+      as it travels to our pipeline.
     </p>
   </section>
 
@@ -241,8 +238,8 @@
     <p>
       <strong> 
       AI-Ensemble is designed around controlled manipulation of model parameters
-      and probabilistic reasoning principles, applying Bayesian-inspired inference
-      to guide one-shot generation without relying on conversational memory.
+      and probabilistic reasoning principles, applying Bayesian-inspired inference.
+      
      </strong>
     </p>
   </section>
@@ -254,7 +251,7 @@
 </main>
 
 <footer>
-  AI-Ensemble — controlled stochastic reasoning as a first-class instrument
+  AI-Ensemble — multiple model stochastic reasoning as a first-class instrument
 </footer>
 
 </body>
