--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
   <title>AI-Ensemble — Product</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
-        content="AI-Ensemble is a three plane studio to help you form a PROMPT and challange the it OUTCAME." />
+        content="A three-plane learning system that teaches you how prompts shape answers—before those answers shape decisions.." />
 
   <style>
     :root {
@@ -123,8 +123,7 @@
 <header>
   <h1>AI-Ensemble</h1>
   <p>
-    A three-stage pipeline that separates prompt creation,
-    prompt output, and verification.
+  Learn to ask better questions before chasing better answers.
   </p>
 </header>
 
@@ -133,49 +132,55 @@
   <section>
     <h2>Overview</h2>
     <p>
-      AI-Ensemble is a stochastic reasoning system designed for academic research.
+      Prompt. Observe. Diagnose. Improve. Repeat..
     </p>
     <p>
-      Unlike chat-based assistants, AI-Ensemble is <strong>multidimensional</strong>.
-      Each query is A) refined, B) generated three times under different 
-      stochastic parameters, C) evaluated potential blind spots.
-      The first plane refines the question while the last plane evaluates.
+    By revealing conservative, balanced, and exploratory response patterns, 
+    users learn to anticipate outcomes before they occur. This trains judgment, 
+    not dependency. Children learn structured curiosity, students learn
+    analytical framing, and professionals learn to design prompts that travel 
+    reliably across systems and contexts.
     </p>
     <p>
-      The middle plain generates the output three times under different perspectives
+      The middle plane presents three parallel responses—conservative, balanced, and exploratory—generated from the same prompt under different stochastic regimes. This exposes how the same question can legitimately lead to different answers. Users learn that variation is not noise or error, 
+      but structure. Over time, they begin to predict which type of answer their prompt will produce, turning uncertainty into insight.
     </p>
   </section>
 
   <section>
-    <h2>The stochastic reasoning pipeline</h2>
+    <h2>Good prompts are informed beliefs, not guesses.</h2>
 
     <div class="pipeline">
 
       <div class="stage">
         <h3>1. Refining — help you make a prompt</h3>
         <p>
-          The refining plane is designed for abstraction, reframing,
-          and optimal prompt creation.
+        The first plane acts as a prompt coach. It helps users reformulate vague ideas
+        into structured, meaningful problems using implicit Bayesian priors. 
+        Instead of correcting answers, it teaches how questions are formed. 
         </p>
         <p>
-          It operates under a high-variance stochastic regime and applies
-          a prompt prior for helping you to improve our prompt.
+         This makes it ideal for children learning critical thinking, students developing analytical skills, 
+         and academics refining research questions. Learning happens at the level of reasoning, not imitation.      
         </p>
         <p>
-          This stage is optimized for prompt discovery,
-          not for output generation.
+          Teaching prompt literacy is teaching thinking.
         </p>
       </div>
 
       <div class="stage">
         <h3>2. Ensemble — parallel stochastic alternatives</h3>
         <p>
-          The Ensemble stage evaluates the same input in parallel stochastic planes.
+          The middle plane presents three parallel responses—conservative, balanced, and exploratory—generated from 
+          the same prompt under different stochastic regimes. This exposes how the same question can legitimately 
+          lead to different answers. Users learn that variation is not noise or error, but structure. 
+          Over time, they begin to predict which type of answer their prompt will produce, 
+          turning uncertainty into insight.
         </p>
         <p>
-          Each plane shares identical instructions and differs only in
-          sampling parameters such as temperature, top-p, top-k,
-          or repetition control.
+         The system is grounded in Bayesian statistical principles. Implicit priors guide learning 
+         and reasoning without storing, exposing, or modifying user input. 
+         This mirrors how humans learn: updating beliefs based on evidence, not memorizing answers.
         </p>
         <p>
           Outputs are rendered side-by-side to expose uncertainty 
@@ -186,15 +191,18 @@
       <div class="stage">
         <h3>3. Output evaluator— find weak spots</h3>
         <p>
-          The output evaluator will look for potential pitfalls in the prompt outcame.
+         The final plane critically evaluates the prompt itself, highlighting ambiguities, 
+         hidden assumptions, and structural weaknesses. Because users already know the
+        expected answer space, they can clearly see why a prompt failed or succeeded. 
+        This closes the learning loop and initiates deliberate improvement—without trial-and-error guessing.
         </p>
         <p>
-          It operates under a lower-variance stochastic regime and applies
-          explicit inquisitory priors leading to a prompt review.
+        Train once. Prompt anywhere.
         </p>
         <p>
-          The user can make the final decision on the merit of the output
-          once his idea has travel through AI ensemble pipeline.
+        The end result is not a better answer in one system, but a reusable skill. 
+        Users leave with prompts that are portable, robust, and intentional—because 
+        they understand how and why those prompts work.   
         </p>
       </div>
 
@@ -215,21 +223,19 @@
   </section>
 
   <section>
-    <h2>Model-agnostic and local execution</h2>
+    <h2>Good prompts are informed beliefs, not guesses.</h2>
     <p>
       AI-Ensemble is model-agnostic and does not depend on proprietary
       cloud-only features.
     </p>
     <p>
-      The same three-stage stochastic pipeline can be executed locally
-      using open-weight models, enabling versioned, reproducible reasoning
-      without cloud dependency.
+    Inference guided by proprietary stochastic priors.
     </p>
     <ul>
-      <li>CPU-only execution (no GPU required)</li>
-      <li>Quantized models supported</li>
-      <li>No external data access required</li>
-      <li>Exact control over sampling parameters and seeds</li>
+      <li>Priors applied at inference, not training</li>
+      <li>Designed Variability</li>
+      <li>Controlled Stochasticity.</li>
+      <li>Where stochastic variation is guided by proprietary priors</li>
     </ul>
   </section>
 
@@ -237,9 +243,8 @@
     <h2>Design philosophy</h2>
     <p>
       <strong> 
-      AI-Ensemble is designed around controlled manipulation of model parameters
-      and probabilistic reasoning principles, applying Bayesian-inspired inference.
-      
+      AI-Ensemble applies proprietary priors to stochastic parameters, transforming raw randomness into
+      structured, interpretable variation.      
      </strong>
     </p>
   </section>
