--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <div id="RefiningOutput" class="chat"></div>
 </section>
 <main>
-  <h3>Ensemble: eeing multiple responses reveals what the prompt allows or forbids.</h3>  
+  <h3>Ensemble: Seeing multiple responses reveals what the prompt allows or forbids.</h3>  
   <div id="chat"></div>
 
   <textarea id="promptInput"
